# taskdog

./: CLAUDE.md  MANUAL.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/plans/: taskdog-improvement-backlog.md
.claude/rules/: architecture.md  maintenance.md
src/: errors.ts  gitlab.ts  gitlabParse.ts  main.ts  mrStore.ts  render.ts  settings.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appid.rs  devstatus.rs  gitlab.rs  jira.rs  lib.rs  secrets.rs
tests/: gitlabParse.test.ts
