[package]
name = "jira-today-todo"
version = "0.1.0"
description = "TaskDog — Jira 마감 할 일 데스크톱 위젯"
authors = ["Syworks"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"                    # AppUserModelId DisplayName/IconUri 레지스트리 등록
tauri-winrt-notification = "0.7"   # 플러그인 우회해 우리 AUMID로 토스트 직접 발송
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
] }   # 시작 메뉴 바로가기에 AUMID 속성 부여(비설치 실행에서도 토스트 발송 등록)
